--- a/l4a/package.json
+++ b/l4a/package.json
@@ -14,7 +14,8 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "typeit-react": "^2.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "gh-pages": "^5.0.0"
   },
   "scripts": {
     "homepage": "http://bttodd11.github.io/Leverage4Advantage/",
